# multi-naics-app-temp

./: README.md  app.py  main.py  multi-naics-current-minimal.csv  multi-naics-review.xlsx  pyproject.toml  requirements.txt
